[package]
name = "rsofa"
version = "0.4.2"
authors = ["Duncan Eddy <duncan.eddy@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
description = "Rust bindings of IAU SOFA C Library"
homepage = "https://github.com/duncaneddy/rsofa"
repository = "https://github.com/duncaneddy/rsofa"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
approx = "^0.5.0"

[build-dependencies]
cc ="1.0"
bindgen = "0.59.2"
rustfmt = "0.10.0"