[package]
name = "rsofa"
version = "0.5.0"
authors = ["Duncan Eddy <duncan.eddy@gmail.com>"]
edition = "2018"
description = "Rust bindings of IAU SOFA C Library"
homepage = "https://github.com/duncaneddy/rsofa"
repository = "https://github.com/duncaneddy/rsofa"
documentation = "https://docs.rs/rsofa/"
keywords = ["space", "astrodynamics", "satellite"]
categories = ["science"]
readme = "README.md"
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
approx = "^0.5.0"

[build-dependencies]
cc ="1.0"
bindgen = "0.59.2"
